# fastms

./: CMakeLists.txt  Makefile
src/examples/: example_batchprocessing.cpp  example_gui.cpp
src/libfastms/: SysTime.h  time.cpp
src/libfastms/solver/: solver.cpp  solver.h  solver_base.cpp  solver_base.h  solver_common_operators.h  solver_device.cu  solver_device.h  solver_host.cpp  solver_host.h
src/libfastms/util/: has_cuda.cpp  image.h  image_access.h  image_access_convert.h  image_access_convert_cuda.cu  image_mat.cpp  image_mat.h  mem.h  mem_cuda.cuh  real.h  sum.h  sum_cuda.cuh  timer.h  timer_cuda.cuh  vars_cuda.cuh
